Added many things

--- a/war/index.html
+++ b/war/index.html
@@ -25,6 +25,7 @@
 	  </div>
 	</nav>
     <h1>Bienvenido al sistema de administración de TFGs</h1>
+    <a href="/isst_tfg_t4">Entra Aquí</a>
 	
   </body>
 </html>
